# Hierarchy-zBuffer_BVH

./: CMakeLists.txt  README.md
include/: Texture.hpp  Triangle.hpp  global.hpp  rasterizer.hpp
src/: main.cpp  rasterizer.cpp
